Added refresh and logout
